# ChangeLog for app-admin/syslog-ng
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.414 2015/03/14 02:56:13 mr_bones_ Exp $

  14 Mar 2015; Michael Sterrett <mr_bones_@gentoo.org>
  -files/3.4/syslog-ng-3.4.2-autotools.patch,
  -files/3.4/syslog-ng-3.4.2-compile.patch, -syslog-ng-3.4.7.ebuild:
  old

  19 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org>
  +files/3.6/syslog-ng-3.6.2-redis.patch, -files/3.5/syslog-ng.conf.gentoo,
  -files/3.5/syslog-ng.conf.gentoo.fbsd,
  -files/3.5/syslog-ng.conf.gentoo.hardened, -files/3.5/syslog-ng.confd,
  -files/3.5/syslog-ng.rc6, syslog-ng-3.6.2.ebuild:
  Add upstream patch to avoid memory leak with USE=redis

  18 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org>
  -files/3.6/syslog-ng-3.6.1-link-smtp.patch,
  -files/3.6/syslog-ng-3.6.1-warnings.patch, -syslog-ng-3.6.1.ebuild:
  old

  18 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org>
  files/3.6/syslog-ng.confd, files/3.6/syslog-ng.rc6:
  update to /run from /var/run (bug #531840)

*syslog-ng-3.6.2 (18 Dec 2014)

  18 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org> +syslog-ng-3.6.2.ebuild:
  version bump

  04 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org>
  +files/3.6/syslog-ng-3.6.1-warnings.patch, syslog-ng-3.6.1.ebuild:
  Add upstream patch to suppress warnings at startup

  02 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org> metadata.xml:
  update metadata (bug #531382)

  10 Nov 2014; Michael Sterrett <mr_bones_@gentoo.org> syslog-ng-3.6.1.ebuild:
  fix upstream doc link and doc install - reported by Tomas Mozes via bug
  #528788 and bug #528790

  09 Nov 2014; Michael Sterrett <mr_bones_@gentoo.org> -syslog-ng-3.5.6.ebuild:
  old

*syslog-ng-3.6.1 (09 Nov 2014)

  09 Nov 2014; Michael Sterrett <mr_bones_@gentoo.org>
  +files/3.6/syslog-ng-3.6.1-link-smtp.patch, +files/3.6/syslog-ng.conf.gentoo,
  +files/3.6/syslog-ng.conf.gentoo.fbsd,